--- a/web.html
+++ b/web.html
@@ -1,4 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title >formular </title>
+</head>
 <body>
-<h1>header1</h1>
-<a href="https://google.com" target="_blank" title="link">Link</a>
+    <h1>header1</h1>
+    <a href="https://google.com" target="_blank" title="link">Link</a>
+    <img src="https://images.pexels.com/photos/3222386/pexels-photo-3222386.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260"
 </body>
+</html>
