added css elements for test

--- a/style.html
+++ b/style.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title >style</title>
+    
+    <link rel="stylesheet" type="text/css" href="css/test.css">
 </head>
 <body>
     <form>
@@ -9,7 +11,8 @@
 form elements
 .
 </form>
-    <h1 style= "font-size: 30px; color: lightcoral">heading1 </h1>
+    <span> elem </span>
+    <h1 class= "big"><span>heading1</span> </h1>
     <h2>heading2 </h2>
     <h3>heading3 </h3>
 </body>
