--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
         <img src= "https://lh3.googleusercontent.com/lFyJStTJttU-mO0_liwG50avIHxGzwB4BbNtmnTLGJ7v-mJzkK2xRz5jvfBayJl5kUXXMp0uo88Zv10zICUjH94BvVQb6VrUx_VST1CpzW0MDvDhMu81D_xBp_qgxBN2SJc9nZEIRzde5oFaOe42QZ80JmNbRK4TpJ1aPFPPlG_SiTnlq47c3oCNbXSEgNU-fW1uc8pmnr2YSpqjUPJELkL0Vum4pWkw9LvWa1Myf7IFLnEtOygYswTalTH3gPQeOdn7D6Y7qg_qDiyi4chSPrAJ3DNpv1ZfZQ_BDTWFaspmvObA6tN6wy1iSz-ZRAxaWkwgLGwtBME71x0UwBRiOkuOfLtDWlbhVP9sqieAgOi_2XpL1eMkOANY2bYXxRsWAKMoFcXuF1qo8N0j4DzJCz5DUP1bYEOcFFeM1b9Ll35vIaCHEFDVNOHt5zBFl-xHi5OsDV-c8MLWy3nH7MbofOO9LNLDQK9TyS-hSAGceorss1WH9D3Km-1z7NlzI6E6-KvHmQ-7qe9MbLgY7yyTtoFx7spDDRFqb_c5WOPLFRcjpgHuSB_zVUT2ZaTFn6NlHMTWZbMRf9hUG00QF6kFiLA-jK6SBzA8rB9Qqq_mHAm5EM-Tn6y7U2Nqdzs5vbcmRsCha15TEChNjUmBTYzROL8zRYMVPIHhf7rytKoeLyuB6cpAs-Yndr1LISwiwg=w627-h940-no">
         <h1> name </h1>
     </header>
-
+    <!-- main element -->
+    <main>
+    <h2>Lobont stefan </h2>
+    <p>personal portoflolio </p>
+    <img src="https://lh3.googleusercontent.com/c8l6SPAP6bYw_YmHtCL_GeNtB373c1W0wajAqcGSv01uuy93JfeB5FCB9-XDyoAUE1_QNYhKznh7rCSGdUOGwO-ZPZYLNq_6Z3PSOozS4TNs-a47EVSr-kFtwUule2mxPF0B1T3XPYOjmdTTneKIkRZwGWsbyRJO5hnFSK4EEQ2wCFZBBeMLcJdRsH2GOc_R06Mk8_klf0kQPypwKWzhSSnQ_zsJfjxlx-pP8voiINrUL4hygVQmd08RlHfgnAlu6V2Xqrg_Ot2kYTFOoyHoH8EiyEWnTryrYT1gl-8AsqVELe6SQG3_x7Uxg4RaJoGo06NUU_rUTIAYhKKI1Rfr8l7pkYMoeQ5k4xFj0iA3JOMQjjSUqMUDGjrW5HMu94u0cBPehNV8OU9vg9uPhjSzY83w1rG1kx9SPQj6UxvC-NQ7ex9RoIg6HMWOsvQ6NNZQeA-kjUI9T0vc6y0N9AlPDttZYBtbUBFMB5VK7JHyA4SFOjUC63djVEKYh_jAhFZ1dqTnj2zUdf-rc7_Ty_OtX3iD4d6RGjIALa7s2PSRQO7JXVKESwtuAc162YVNa6RbojLku5eN2Jdus3f9g9WdEcWTI1mgds5BYoENecBhFpp4nerah6_j_0STPN_1SnHJwEYwe4d8ft92Fbd1LnLZhBgjzxu4x5ILM3n-YmRztlzjuh5m5tluz-EjqgtmWA=w958-h539-no">
+    <p>te astept</p>
+    <ol>
+        <li>contact</li>
+        <li>video</li>
+        <li>photo</li>
+    </ol>
+    <h2>blog posts</h2>
+    <p>inside my mind</p>
+    </main>
 </body>
 </html>
