--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     </ol>
     <h2>blog posts</h2>
     <p>inside my mind</p>
+    <ul>
+        <li><a href="https://www.instagram.com/s_by_f/" target="_blank">instagram</li>
+        <li><a href="https://medium.com/@stefanlobont" target="_blank"> medium </li>
+    </ul>
     </main>
 </body>
 </html>
