--- a/index.html
+++ b/index.html
@@ -28,5 +28,8 @@
         <li><a href="https://medium.com/@stefanlobont" target="_blank"> medium </li>
     </ul>
     </main>
+    <footer>
+        <p>test site &copy; Stefan </p>
+    </footer>
 </body>
 </html>
