--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title> protfolio </title>
+    <link rel="stylesheet" type="text/css" href="css/portoflio.css">
 </head>
 
 <body>
